<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/verif" />

        <TextView
            android:id="@+id/reponse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="showReponse"
            android:text="@string/show"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/back"
            android:onClick="back"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>